# trend-lab-agent-relay-dashboard-260708

./: README.md  pyproject.toml
src/agent_relay_dashboard/: main.py
tests/: test_smoke.py
