[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-relay-dashboard"
version = "0.1.0"
description = "Local dashboard and CLI for racing coding agents and comparing patches."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agent Relay Contributors" }]
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "typer>=0.12",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "httpx>=0.27"]

[project.scripts]
agent-relay = "agent_relay_dashboard.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_relay_dashboard"]

[tool.pytest.ini_options]
pythonpath = ["src"]
